--- a/homepage.html
+++ b/homepage.html
@@ -1,11 +1,139 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang='en'>
+  <head>
+    <meta charset='utf-8' />
+    <title>Your Calendar</title>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js'></script>
+    <script defer src="categories.js"></script>
+    <script defer src="main.js"></script>
+    <link rel = "stylesheet" href="style.css">
+    <link rel=  "stylesheet" href="responsive.css">
+    <link rel=  "stylesheet" href="homepage.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+  </head>
+  <body>
+
+<header class="main-header">
+  <div class="top-line">
+    <div class="left-side">
+    <a href="index.html" class="logo-link">
+      <img class="logo" src="Logo.png" alt="Company logo">
+    </a>
+    <div class="wallet-watchers">
+      <div class="bold-text">
+        <a class="btn" href="homepage.html">Wallet Watchers</a>
+      </div>
+    </div>
+
+    <div class="about-us">
+      <a class="btn">About Us</a>
+    </div>
+
+    <div class="faq">
+      <a class="btn">FAQ</a>
+    </div>
+    <div class="contacts">
+      <a class="btn">Contacts</a>
+    </div>
+
+  </div>
+
+  <div class="right-side">
+    <img class="Lines" src="3lines.png" alt="Company logo">
+    <div class="login">
+    <button class="login-button" type="submit">Log In</button>
+    </div>
+</div>
+</div>
+</header>
+
 <body>
-    
+  <!DOCTYPE html>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8' />
+    <title>Your Calendar</title>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js'></script>
+    <script defer src="categories.js"></script>
+    <script defer src="main.js"></script>
+    <link rel = "stylesheet" href="style.css">
+    <link rel=  "stylesheet" href="responsive.css">
+    <link rel=  "stylesheet" href="homepage.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+
+<header class="main-header">
+  <div class="top-line">
+    <div class="left-side">
+    <a href="index.html" class="logo-link">
+      <img class="logo" src="Logo.png" alt="Company logo">
+    </a>
+    <div class="wallet-watchers">
+      <div class="bold-text">
+        <a class="btn" href="homepage.html">Wallet Watchers</a>
+      </div>
+    </div>
+
+    <div class="about-us">
+      <a class="btn">About Us</a>
+    </div>
+
+    <div class="faq">
+      <a class="btn">FAQ</a>
+    </div>
+    <div class="contacts">
+      <a class="btn">Contacts</a>
+    </div>
+
+  </div>
+
+  <div class="right-side">
+    <img class="Lines" src="3lines.png" alt="Company logo">
+    <div class="login">
+    <button class="login-button" type="submit">Log In</button>
+    </div>
+</div>
+</div>
+</header>
+
+  <main class="first-page">
+  <h1>A Calendar with money goals</h1>
+  <a class="Start" type="submit" href="index.html">Getting Started</a>
+  <p>Start for free</p>
+  </main>
+
+  <div class="second-page">
+  <h2>What is Wallet Watcher?</h2>
+  <p> Wallet Watcher is a personal finance calendar that keeps track of your money and helps you with budgeting and saving. Wallet Watcher is made for everyone to easily see what you spend your money on with a simple and intuitive way to track your finances rather than with a stack of papers and a calculator. As highschool and college students, we know the importance of keeping on a budget, and the pains that come along with keeping one. With Wallet Watcher, you no longer have to comb through days of receipts and notes just to see if you have enough for next week's outing or new buy!</p>
+  <p>The goal is not just to track numbers, but to help people develop better spending habits. The site makes it easy to check your progress and see the patterns in how you use your money. If your saving for something big, or just want to stay in the green, we set you on a clear path for achieving your goal.
+</p>
+</div>
+
+
+<div class="third-page">
+<div class="third-page-photos">
+  <img src="Coders.png" alt="Photo of Developers">
+</div>
+
+  <div class="third-page-text">
+    <h2>Our Background</h2>
+  <p>We are a team students in highschool and college working together in the All Star Code program. All Star Code has given us the opportunity to expand our programming skills, collaborate with like-minded peers, and create projects that solve real-world problems. As students, we've both experienced the struggle of keeping track of money, whether it's income from a part-time job, allowance, or school work and we wanted to design something that makes budgeting less intimidating.</p>
+  <p>By combining our skills and creativity, we set out to create a budgeting platform that is straightforward, functional, and designed with our peers in mind. This project reflects our shared passion for technology and our desire to build tools that can have a real impact on people's lives. Thanks to All Star Code's guidance and resources, we were able to turn an idea into a working product that we're proud to share. It's not just about coding—it's about problem-solving, teamwork, and creating something that can genuinely help others.</p>
+</div>
+</div>
+
+
+<div class="fourth-page">
+  <div class="fourth-page-left">
+  <h2>Is Wallet Watcher For You?</h2>
+</div>
+
+  <div class="fourth-page-right">
+  <p> Of course! This website is for anyone who wants to keep track of their money effortlessly. It can help students who are getting their first paychecks, people balancing school and part-time work, or just anyone trying to be more careful with how they spend. We want it to be useful for people who might not know much about budgeting but still want to be more organized with their money.</p>
+  <p>It works for everyday spending like coffee or snacks, and also for bigger things like rent, bills, or saving up for something important. We made it so it can fit into your daily routine without taking up a lot of time. We hope that this tool helps people feel more in control of their money, no matter how much they make or spend each week.</p>
+</div>
+</div>
 </body>
-</html>
+
+
